<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <group android:id="@+id/mild_priority">
        <item android:id="@+id/menu_main_message"
            android:title="@string/menu_message"/>

        <item android:id="@+id/menu_main_task"
            android:title="@string/menu_task"/>
    </group>

    <group android:id="@+id/moderate_priority">
        <item android:id="@+id/menu_skin_change"
            android:title="@string/menu_change_skin"/>

        <item android:id="@+id/menu_question_feedback"
            android:title="@string/question_feedback"/>

        <item android:id="@+id/menu_about_app"
            android:title="@string/about_app"/>
    </group>

    <group android:id="@+id/severe_priority">
        <item android:id="@+id/menu_mode_switch"
            android:title="@string/current_mode"/>

        <item android:id="@+id/menu_main_set"
            android:title="@string/set"/>

        <item android:id="@+id/menu_main_exit"
            android:title="@string/exit"/>
    </group>
</menu>